--- a/scroll-spy/react/index.html
+++ b/scroll-spy/react/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Context Menu with React</title>
+    <title>Scroll Spy with React</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
 
     <script src="app.js"></script>
   </body>
