--- a/infinite-scroll/debunce-throttle/index.html
+++ b/infinite-scroll/debunce-throttle/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Infinite Scroll Debounce and Throttle</title>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <title>Infinite Scroll Debounce and Throttle</title>
   </head>
   <body>
-    <div id="container">
+    <div id="app">
       <ul id="list"></ul>
       <div id="fetchMore"></div>
     </div>
