--- a/drop-down/basic/index.html
+++ b/drop-down/basic/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="container">
-      <div id="dropdown" class="dropdown-container"></div>
+      <div id="dropdown" class="dropdown-container">
+        <!-- javascript -->
+      </div>
       <div id="userlist" class="table-container">
         <div>
           <span>User: Kenneth</span>,
@@ -20,6 +22,7 @@
     </div>
     <div class="back-drop">
       <div class="dropdown-item-list-box">
+        <!-- javascript -->
         <div class="dropdown-item-box selected"><span>Naver</span></div>
         <div class="dropdown-item-box"><span>Yahoo</span></div>
       </div>
