--- a/drop-down/basic/index.html
+++ b/drop-down/basic/index.html
@@ -12,30 +12,30 @@
     <div class="container">
       <div class="dropdown-container">
         <!-- javascript -->
-        <div class="dropdown-select-container">
+        <!-- <div class="dropdown-select-container">
           <span class="dropdown-select-label">선택해주세요.</span>
           <div class="dropdown-select-arrow-container">
             <div class="dropdown-select-arrow"></div>
           </div>
-        </div> 
+        </div>  -->
       </div>
 
       <div class="userlist-container">
         <!-- javascript -->
-        <div>
+        <!-- <div>
           <span>User: Kenneth</span>,
           <span>favorites: Google</span>
-      </div>
+        </div> -->
       </div>
     </div>
 
     <div class="backdrop-container">
       <!-- javascript -->
-      <div class="dropdown-list">
+      <!-- <div class="dropdown-list">
         <div class="dropdown-item">
           <span>Google</span>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
