--- a/auto-complete/basic/index.html
+++ b/auto-complete/basic/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="auto-complete-container">
         <!-- javascript -->
-        <input type="text" placeholder="Please Enter" class="auto-complete-input" />
+        <!-- <input type="text" placeholder="Please Enter" class="auto-complete-input" />
         <div class="auto-complete-list">
           <div class="auto-complete-item">
             <span>Item A</span>
@@ -22,7 +22,7 @@
           <div class="auto-complete-item">
             <span>Item C</span>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <script src="script.js"></script>
