--- a/instant-search/basic/index.html
+++ b/instant-search/basic/index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instant Search Basic</title>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="search-container">
-        <input type="text" placeholder="Please enter." class="search-input" />
+        <!-- javascript -->
+        <!-- <input class="search-input" type="text" placeholder="Please enter." /> -->
       </div>
 
       <div class="list-container">
-        <div>
+        <!-- javascript -->
+        <!-- <div>
           <span>word A</span>
         </div>
         <div>
@@ -21,7 +25,7 @@
         </div>
         <div>
           <span>word C</span>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
