--- a/modal/axios-modal/index.html
+++ b/modal/axios-modal/index.html
@@ -18,9 +18,10 @@
 
     <div class="modal-container">
       <div class="profile">
-        <img src="https://via.placeholder.com/50" alt="" />
-        <h4>Profile Name</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, atque?</p>
+        <img class="profile-thumbnail" src="" alt="" />
+        <img class="profile-img" src="" />
+        <h4 class="profile-name">Profile Name</h4>
+        <p class="profile-bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, atque?</p>
       </div>
     </div>
   </body>
