--- a/loading/basic/index.html
+++ b/loading/basic/index.html
@@ -17,8 +17,8 @@
         </div>
 
         <div class="form-group">
-          <label for="content">Body</label>
-          <input type="text" class="form-control" id="content" />
+          <label for="body">Body</label>
+          <input type="text" class="form-control" id="body" />
         </div>
 
         <div class="form-group">
@@ -30,6 +30,6 @@
       </form>
     </div>
 
-    <div id="loading-spinner">Loading</div>
+    <div id="loading">Loading</div>
   </body>
 </html>
